database is connected and location setup done

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGO_DB=`mongodb+srv://blog_app:EVxF6AqJiIIpmmSC@cluster0.hncbqqn.mongodb.net/?retryWrites=true&w=majority`
-PORT=5000
+MONGO_DB=`mongodb+srv://blog_app:EVxF6AqJiIIpmmSC@cluster0.hncbqqn.mongodb.net/blogRahim?retryWrites=true&w=majority`
+PORT=5001
